<?xml version="1.0"?>
<package format="2">
  <name>realtime_utilities</name>
  <version>0.0.1</version>
  <description>The realtime_utilities package</description>
  <maintainer email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</maintainer>

  <license>BSD-3</license>

  <!-- <url type="website">http://wiki.ros.org/realtime_utilities</url> -->
  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <export>
  </export>
</package>
